vitrail-pg-macros/tests/ui/fail/invalid_default.rs
use vitrail_pg_macros::schema;

schema! {
    model user {
        id String @id @default(autoincrement())
    }
}

fn main() {}
